--- a/main.css
+++ b/main.css
@@ -5,3 +5,16 @@ body{
 .dinosaur {
   border: 2px solid burlywood;
 }
+
+.assignment {
+  border: 2px solid black;
+  background-color: white;
+  text-align: center;
+  padding: 15px;
+}
+
+.assignment-title {
+  background-color: lightgray;
+  border-bottom: darkgrey;
+  padding: 10px;
+}
